# chat_app

./: .Dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: database.py  main.py  schemas.py
app/api/routers/: accounts.py  auth.py  register.py  users.py  websocket.py
app/front/: accounts_page.py  websocket_page.py
app/schemas/: accounts_schemas.py  auth_schemas.py  users_schemas.py
app/services/: auth_services.py  template_services.py  user_security_services.py  websocket_services.py
app/templates/: chat.html  chat_ws.html  head_boilerplaite.html  login.html  register.html  users.html
tests/: test_users.py
